Version 2.02.101 - 
===================================
  Direct udev to use 3min timeout for LVM devices. Recent udev has default 30s.
  Do not scan multipath or RAID components and avoid incorrect autoactivation.
  Fix MD/loop udev handling to fire autoactivation after setup or coldplug only.
  Make RAID capable of single-machine exclusive operations in a cluster.
  Drop calculation of read ahead for deactivated volume.
  Check for exactly one lv segment in validation of thin pools and volumes.
  Fix dmeventd unmonitoring of thin pools.
  Fix lvresize for stacked thin pool volumes (i.e. mirrors).
  Write Completed debug message before reinstating log defaults after command.
  Skip pvmove of RAID, thin, snapshot, origin, or mirror LVs in a cluster.
  Refresh existing VG before autoactivation (event retrigger/device reappeared).
  Use pvscan -b in udev rules to avoid a deadlock on udev process count limit.
  Add pvscan -b/--background for the command to be processed in the background.
  Don't assume stdin file descriptor is readable.
  Avoid unlimited recursion when creating dtree containing inactive pvmove LV.
  Require exactly 3 arguments for lvm2-activation-generator. Remove defaults.
  Disable pvmove of merging or converting logical volumes.
  Enable pvmove of snapshots and snapshot origins.
  Fix inability to specify LV name when pvmove'ing a RAID, mirror, or thin-LV.
  Inform lvmetad about any lost PV label to make it in sync with system state.
  Support most of lvchange operations on stacked thin pool meta/data LVs.
  Add ability to pvmove RAID, mirror, and thin volumes.
  Make lvm2-activation-generator silent unless it's in error state.
  Remove "mpath major is not dm major" msg for mpath component scan (2.02.94).
  Prevent cluster mirror logs from being corrupted by redundant checkpoints.
  Fix ignored lvmetad update on loop device configuration (2.02.99).
  Use LVM_PATH instead of hardcoded value in lvm2 activation systemd generator.